<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".VideogameDetail">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/all"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/final_fantasy" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="-8dp"
        android:layout_marginLeft="-8dp"
        android:layout_marginStart="-8dp"
        android:background="@drawable/ic_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardMaxElevation="0dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="180dp"
                android:layout_marginRight="180dp"
                android:layout_marginBottom="32dp"
                android:text="@string/name"
                android:textColor="@color/teal_700"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/teal_200"
                android:text="@string/description" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/PriceTextViewDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/teal_200"
                android:text="@string/price_form"
                android:layout_marginLeft="20dp" />
                <TextView
                    android:id="@+id/priceEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/teal_200"
                    android:text="@string/price" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/PlaceTextViewDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/teal_200"
                android:text="@string/place_form" />
            <TextView
                android:id="@+id/PlaceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/teal_200"
                android:text="@string/place" />
            </LinearLayout>

            <Button
                android:id="@+id/attendButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/ic_btn_atten"
                android:gravity="center"
                android:text="@string/attend"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <Button
                android:id="@+id/organizerButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/ic_btn"
                android:gravity="center"
                android:text="@string/organizerData"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="140dp"
        android:layout_height="200dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:cardMaxElevation="0dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2">

        <ImageView
            android:id="@+id/posterImgeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/all"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/final_fantasy" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>