<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".AddActivity">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/all"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/final_fantasy" />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="-8dp"
        android:layout_marginLeft="-8dp"
        android:layout_marginTop="-8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardMaxElevation="0dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleAddTextView"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_activity_add"
                android:textColor="@color/teal_700"
                android:textSize="32sp"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints="@string/name_form"
                android:background="@drawable/ic_field"
                android:ems="80"
                android:hint="@string/name_form"
                android:inputType="textAutoComplete"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <EditText
                    android:id="@+id/priceEditText"
                    android:layout_width="180dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:autofillHints="@string/price_form"
                    android:background="@drawable/ic_field"
                    android:ems="80"
                    android:hint="@string/price_form"
                    android:inputType="textAutoComplete"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp" />

                <EditText
                    android:id="@+id/dateEditText"
                    android:layout_width="180dp"
                    android:layout_height="46dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:autofillHints="@string/date_form"
                    android:background="@drawable/ic_field"
                    android:ems="80"
                    android:hint="@string/date_form"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:inputType="date|text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <EditText
                    android:id="@+id/placeEditText"
                    android:layout_width="180dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:autofillHints="@string/place_form"
                    android:background="@drawable/ic_field"
                    android:ems="80"
                    android:hint="@string/place_form"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:inputType="date|text" />

                <EditText
                    android:id="@+id/urlEditText"
                    android:layout_width="180dp"
                    android:layout_height="46dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:autofillHints="@string/url_form"
                    android:background="@drawable/ic_field"
                    android:ems="80"
                    android:hint="@string/url_form"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:inputType="textUri" />
            </LinearLayout>

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints="@string/description_form"
                android:background="@drawable/ic_field"
                android:ems="255"
                android:gravity="clip_vertical"
                android:hint="@string/description_form"
                android:inputType="textMultiLine"
                android:lines="6"
                android:maxLines="12"
                android:minLines="6"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/ic_btn"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>