<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/plum_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/posterCardView">
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/price"
        android:textColor="@color/teal_500"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/name"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toEndOf="@+id/posterCardView"
        app:layout_constraintTop_toBottomOf="@+id/priceTextView" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/date"
        android:textColor="@color/black_200"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/posterCardView"
        android:layout_width="86dp"
        android:layout_height="140dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/posterImgeView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/all"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ori" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_gradient_white"/>
    </androidx.cardview.widget.CardView>

   <!-- <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="#1AFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="120dp"
                android:layout_marginRight="120dp"
                android:layout_marginBottom="8dp"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="120dp"
                android:layout_marginRight="120dp"
                android:layout_marginBottom="32dp"
                android:textColor="#cbcbcb"
                android:text="@string/date" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="100dp"
        android:layout_height="160dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/posterImgeView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/all"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/final_fantasy" />
    </androidx.cardview.widget.CardView>-->
</androidx.constraintlayout.widget.ConstraintLayout>